--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-icons-kit": "^2.0.0",
